# soma-sophia

./: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yaml
.github/workflows/: deploy.yml
client/: .stylelintrc.json  Dockerfile  angular.json  package-lock.json
client/src/: index.html  styles.scss
client/src/app/: app.config.ts  app.routes.ts  auth.guard.ts  auth.service.ts  format-seconds.pipe.ts  repetition.pipe.ts
client/src/app/auth-callback/: auth-callback.ts
client/src/app/completed-routines/: completed-routines.scss
client/src/app/dashboard/: dashboard.html  dashboard.scss  dashboard.ts
client/src/app/login/: login.html  login.scss  login.ts
client/src/app/routine-completed/: routine-completed.html  routine-completed.ts
client/src/app/side-menu/: side-menu.html  side-menu.scss  side-menu.ts
client/src/styles/: _variables.scss
server/: .env.example  Dockerfile  config.py  main.py  pyproject.toml
server/auth/: dependencies.py  dev_router.py  jwt.py  router.py
server/db/: connection.py  models.py  schema.py  users.py
soma-sophia/: README.md  angular.json  package-lock.json  package.json
soma-sophia/src/: index.html  styles.css  styles.scss
soma-sophia/src/app/: app.html  app.routes.ts  app.ts  database.ts  exercise-target.pipe.ts  routine.service.ts
soma-sophia/src/app/completed-routines/: completed-routines.html  completed-routines.ts
soma-sophia/src/app/dashboard/: dashboard.html  dashboard.scss  dashboard.ts
soma-sophia/src/app/header/: header.html  header.ts
soma-sophia/src/styles/: _variables.scss
(+27 files in other folders)
